--- a/usdc-paymaster/package.json
+++ b/usdc-paymaster/package.json
@@ -7,5 +7,9 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "ethers": "^6.13.5",
+    "sendop": "^0.3.0"
   }
 }
