--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.13.5",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -64,6 +65,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sendop": "^0.3.0",
     "sonner": "^1.7.1",
     "stability-client": "^1.9.0",
     "tailwind-merge": "^2.5.5",
